--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@react-navigation/native": "^7.1.6",
     "@rneui/themed": "^4.0.0-rc.8",
     "@supabase/supabase-js": "^2.53.0",
+    "date-fns": "^4.1.0",
     "expo": "54.0.7",
     "expo-blur": "~15.0.7",
     "expo-constants": "~18.0.8",
